deployment/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: deploying-app
  labels:
    app: deploying-app
spec:
  to:
    kind: Service
    name: deploying-app
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
